# CustumDiscTTS

./: .gitignore  Pipfile  README.md  main.py  package-lock.json  pyproject.toml  replit.nix  reqs.txt
TTSHandler/: Mimic3Handler.py  __init__.py  gTTSHandler.py
