[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
gTTS = "^2.2.4"
replit = "^3.2.4"
Flask = "^2.1.1"
PyNaCl = "^1.5.0"
libnacl = "^1.8.0"
ffmpeg = "^1.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"